WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282879
AX: Two new AccessibilitySpinButtonParts are created and never cleaned up for every clearChildren-addChildren cycle of AccessibilitySpinButton, causing a memory leak
https://bugs.webkit.org/show_bug.cgi?id=282879
Summary
AX: Two new AccessibilitySpinButtonParts are created and never cleaned up for...
Tyler Wilcock
Reported
2024-11-09 11:30:39 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-09 11:30:53 PST
<
rdar://problem/139572476
>
Tyler Wilcock
Comment 2
2024-11-09 11:39:34 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36441
EWS
Comment 3
2024-11-11 13:58:17 PST
Committed
286453@main
(a4221ebed1c0): <
https://commits.webkit.org/286453@main
> Reviewed commits have been landed. Closing PR #36441 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug