AX: Two new AccessibilitySpinButtonParts are created and never cleaned up for every clearChildren-addChildren cycle of AccessibilitySpinButton, causing a memory leak https://bugs.webkit.org/show_bug.cgi?id=282879 rdar://139572476

Reviewed by Chris Fleizach.

Prior to this commit, every time an AccessibilitySpinButton calls clearChildren() and addChildren(), we would create
two brand new AccessibilitySpinButtonPart objects with associated object wrappers, without cleaning up the spin button
parts or wrappers from the last cycle, leaking them.

With this commit, we now create the increment and decrementer spin button parts up-front in the AccessibilitySpinButton
constructor, and maintain them between clearChildren-addChildren cycles. This is also better because it keeps UI elements
more stable for ATs, i.e. we are no longer at risk of sending a notification with a spin button part, then calling
clearChildren, effectively detaching the spin button part the AT has a reference to, making it useless.

This commit also includes unrelated changes to garden some test expectations for ITM.

* LayoutTests/accessibility-isolated-tree/TestExpectations:
* Source/WTF/wtf/PlatformEnable.h:
* Source/WebCore/Sources.txt:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::create):
* Source/WebCore/accessibility/AccessibilitySpinButton.cpp:
(WebCore::AccessibilitySpinButton::create):
(WebCore::AccessibilitySpinButton::AccessibilitySpinButton):
(WebCore::AccessibilitySpinButton::incrementButton):
(WebCore::AccessibilitySpinButton::decrementButton):
(WebCore::AccessibilitySpinButton::elementRect const):
(WebCore::AccessibilitySpinButton::addChildren):
(WebCore::AccessibilitySpinButton::step):
(WebCore::AccessibilitySpinButtonPart::AccessibilitySpinButtonPart): Deleted.
(WebCore::AccessibilitySpinButtonPart::create): Deleted.
(WebCore::AccessibilitySpinButtonPart::elementRect const): Deleted.
(WebCore::AccessibilitySpinButtonPart::press): Deleted.
* Source/WebCore/accessibility/AccessibilitySpinButton.h:
* Source/WebCore/accessibility/AccessibilitySpinButtonPart.cpp: Added.
(WebCore::AccessibilitySpinButtonPart::AccessibilitySpinButtonPart):
(WebCore::AccessibilitySpinButtonPart::create):
(WebCore::AccessibilitySpinButtonPart::elementRect const):
(WebCore::AccessibilitySpinButtonPart::press):
* Source/WebCore/accessibility/AccessibilitySpinButtonPart.h: Added.
(isType):
* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::initializeProperties):

Canonical link: https://commits.webkit.org/286453@main